# enncode

./: .gitignore  README.md  example.py  pyproject.toml  requirements.txt
enncode/: compatibility.py  gurobiModelBuilder.py  internalOnnx.py  networkBuilder.py  parser.py
enncode/operators/: concat.py  div.py  dropout.py  gemm.py  mul.py  operator_factory.py  relu.py  sub.py
enncode/parsers/: add_parser.py  averagepool_parser.py  batch_normalization_parser.py  concat_parser.py  conv_parser.py  div_parser.py  dropout_parser.py  flatten_parser.py  gemm_parser.py  identity_parser.py  matmul_parser.py  maxpool_parser.py  mul_parser.py  parser_factory.py  relu_parser.py  reshape_parser.py  shape_parser.py  sub_parser.py  unsqueeze_parser.py
examples/: demo_compatibility.py  demo_cx.ipynb  demo_cx.py  demo_initialization.ipynb  demo_robustness.ipynb  example1.py  example2.py  example3.py  example4.py
examples/examples/: demo_cx.py  demo_initialization.py  example2.py  example4.pth
tests/: conv_softmax.onnx  onnx_generator.py  test_integration.py  tests_utils.py
tests/models/: example4.onnx  example4_simplified.onnx  tens_add.onnx  tens_avgpool.onnx  tens_batchnorm.onnx  tens_concat.onnx  tens_conv.onnx  tens_flatten.onnx  tens_gemm.onnx  tens_identity.onnx  tens_matmul.onnx  tens_maxpool.onnx  tens_relu.onnx  tens_reshape.onnx  tens_reshape_modified.onnx  tens_unsqueeze.onnx
tests/networks/concrete/: backward_processed_modified.onnx  classifier_medium_simplified_dynamic.onnx
tests/networks/power/: flow_modified.onnx  flow_simplified.onnx
tests/unittests/: test_add.py  test_avgpool.py  test_batchnormalization.py  test_concat.py  test_conv.py  test_flatten.py  test_gemm.py  test_identity.py  test_matmul.py  test_maxpool.py  test_operatorfactory.py  test_relu.py  test_reshape.py  test_unsqueeze.py
tests/vnncomp/acasxu/: ACASXU_run2a_1_1_batch_2000_modified.onnx  ACASXU_run2a_1_1_batch_2000_simplified.onnx  ACASXU_run2a_1_1_batch_2000_simplified_modified.onnx
tests/vnncomp/cctsdb_yolo/: patch-1_simplified.onnx
tests/vnncomp/cgan/: cGAN_imgSz32_nCh_1_dynamic_simplified.onnx  cGAN_imgSz32_nCh_1_modified.onnx  cGAN_imgSz32_nCh_1_simplified.onnx  cGAN_imgSz32_nCh_1_simplified_dynamic.onnx
tests/vnncomp/collins_rul_cnn/: NN_rul_full_window_20_dynamic.onnx  NN_rul_full_window_20_simplified.onnx  (+2 more)
(+59 files in other folders)
