[build-system]
requires = [
    "setuptools>=75",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "enncode"
version = "0.1.8"
description = "The enncode is a Python library that creates Gurobi models for neural networks in ONNX format."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Muhammad Atallah", email = "muhammad.sabri@outlook.com" },
    { name = "Lukas Dankwart", email = "lukas.dankwart@tu-dortmund.de"},
    { name = "Mustafa Yalciner", email = "mustafa.yalciner@tu-dortmund.de"}
]
dependencies = [
    "numpy>=1.26.4",
    "onnx>=1.16.2",
    "onnxruntime>=1.20.1",
    "torch>=2.5.1",
    "vnnlib>=0.0.1, <1.0.0",
    "gurobipy>=12.0.3, <13.0.0",
    "onnxsim>=0.4.36, <0.5.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]

[project.urls]
"Repository" = "https://github.com/LukasDankwart/enncode"

[tool.setuptools.packages.find]
where = ["."]
include = ["enncode*"]
